@@ -1,6 +1,8 @@
 ### Info
 
 This direcrory contains a replica of [alpine xvfb fluxbox](https://github.com/drcrane/xvfb-alpine-docker) Docker project
+with an Javafx app built for JDK11.
+
 ### Usage
 * build image
 ```sh
@@ -24,9 +26,13 @@ server=172.17.0.2:0
 ```
 
 if you intend to run remmina from desktop or run is with the option:
-```
+```sh
 remmina -c $(pwd)/connection.remmina
 ```
+Close the `remmina` via  window manager afterwards
+
+![example close](https://github.com/sergueik/springboot_study/blob/master/basic-xvfb-fluxbox/screenshots/capture_close.png)
+
 * destroy container
 ```sh
 docker stop $ID
@@ -66,6 +72,116 @@ this will make it possible to connect into the container using any stock vnc cli
 
 ![example](https://github.com/sergueik/springboot_study/blob/master/basic-xvfb-fluxbox/screenshots/capture_tightvnc_viewer.png)
 
+* if a network error
+```text
+RUN apk add xvfb x11vnc fluxbox xdpyinfo st vim terminus-font 	&& rm -vrf /var/cache/apk/*
+ ---> Running in 45faef831007
+(1/83) Installing libxau (1.0.8-r3)
+(2/83) Installing libbsd (0.8.6-r2)
+ERROR: libxau-1.0.8-r3: network error (check Internet connection and firewall)
+(3/83) Installing libxdmcp (1.1.2-r5)
+...
+1 error; 79 MiB in 96 packages
+The command '...' returned a non-zero code: 1
+```
+occurs, rerun the build command
+
+### Building and Testing Javafx App Interactively
+
+```sh
+IMAGE_NAME=alpine-xvfb-fluxbox-jdk11-maven
+chmod +x run.sh
+docker build -t $IMAGE_NAME -f Dockerfile.alpine-jdk11-maven .
+docker run -d $IMAGE_NAME
+```
+verify the version of java
+
+```sh
+ID=$(docker container ls | grep $IMAGE_NAME |awk '{print $1}')
+docker exec -it $ID java -version
+```
+this will show
+```sh
+openjdk version "11.0.9.1" 2020-11-04 LTS
+OpenJDK Runtime Environment Zulu11.43+55-CA (build 11.0.9.1+1-LTS)
+OpenJDK 64-Bit Server VM Zulu11.43+55-CA (build 11.0.9.1+1-LTS, mixed mode)
+```
+* build the app
+
+```sh
+docker exec -it $ID mvn install
+```
+this will show
+```
+...
+[INFO] javafx11-demo ...................................... SUCCESS [  0.046 s]
+[INFO] logic .............................................. SUCCESS [  3.421 s]
+[INFO] gui ................................................ SUCCESS [  0.416 s]
+[INFO] ------------------------------------------------------------------------
+[INFO] BUILD SUCCESS
+[INFO] --------------------
+```
+* if needed adjust the port in `connection.remmina`
+```sh
+sed -i 's/server=.*/server=172.17.0.3:0/p' connection.remmina
+```
+in the ui, open 
+and run
+```sh
+echo $DISPLAY
+```
+
+![example display settings](https://github.com/sergueik/springboot_study/blob/master/basic-xvfb-fluxbox/screenshots/capure_display_setting.png)
+
+use the output
+```sh
+:1.0
+```
+in the next command
+```sh
+docker exec -e DISPLAY=:1.0 -it $ID mvn package
+```
+run locally in the container
+```sh
+java -Dprism.order=sw -cp target/gui-0.3.0-SNAPSHOT.jar:target/lib/* --module-path target/lib --add-modules=javafx.controls,javafx.base,javafx.graphics example.ChartEx 2>&1 | tee a.log
+```
+or in host (NOTE, the output redirection is not done in this command) 
+```sh
+docker exec -e DISPLAY=:1.0 -it $ID java -Dprism.order=sw -cp target/gui-0.3.0-SNAPSHOT.jar:target/lib/* --module-path target/lib --add-modules=javafx.controls example.ChartEx 2>&1 | tee a.log
+```
+the run will fail with Internal Error:
+```text
+Exception in thread "main" java.lang.reflect.InvocationTargetException
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
+	at java.base/sun.launcher.LauncherHelper$FXHelper.main(LauncherHelper.java:1051)
+Caused by: java.lang.UnsupportedOperationException: Internal Error
+	at javafx.graphics/com.sun.glass.ui.gtk.GtkApplication.lambda$new$6(GtkApplication.java:189)
+	at java.base/java.security.AccessController.doPrivileged(Native Method)
+	at javafx.graphics/com.sun.glass.ui.gtk.GtkApplication.<init>(GtkApplication.java:171)
+	at javafx.graphics/com.sun.glass.ui.gtk.GtkPlatformFactory.createApplication(GtkPlatformFactory.java:41)
+	at javafx.graphics/com.sun.glass.ui.Application.run(Application.java:144)
+	at javafx.graphics/com.sun.javafx.tk.quantum.QuantumToolkit.startup(QuantumToolkit.java:258)
+	at javafx.graphics/com.sun.javafx.application.PlatformImpl.startup(PlatformImpl.java:269)
+	at javafx.graphics/com.sun.javafx.application.PlatformImpl.startup(PlatformImpl.java:158)
+	at javafx.graphics/com.sun.javafx.application.LauncherImpl.startToolkit(LauncherImpl.java:658)
+	at javafx.graphics/com.sun.javafx.application.LauncherImpl.launchApplicationWithArgs(LauncherImpl.java:409)
+	at javafx.graphics/com.sun.javafx.application.LauncherImpl.launchApplication(LauncherImpl.java:363)
+```
+to install any missing dependencies run the command in container as root:
+```sh
+docker exec --user root -it $ID sh
+```
+```sh
+/home/user # apk add mesa-gl
+```
+also can try
+```sh
+docker cp run.sh  $ID:/home/user
+docker exec -e DISPLAY=:1.0 -it $ID ./run.sh
+```
 ### Note
 * if the xvbf session starts and closes immediately, may need to adjust color depth
 * the config file named like
